distribution/kustomize/base/notebook-ci/deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: kubeflow-notebook-ci
spec:
  selector:
    app: kubeflow-notebook-ci
  ports:
    - port: 80
      targetPort: 4004
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeflow-notebook-ci
spec:
  selector:
    matchLabels:
      app: kubeflow-notebook-ci
  template:
    metadata:
      labels:
        app: kubeflow-notebook-ci
    spec:
      serviceAccountName: kubeflow-notebook-ci
      containers:
        - name: kubeflow-notebook-ci
          image: ghcr.io/tidunguyen/kubeflow-notebook-ci
          ports:
            - containerPort: 4004
          imagePullPolicy: Always
          volumeMounts:
            - name: dotenv
              mountPath: /app/server/.env
              subPath: server.env
            - name: dotenv
              mountPath: /app/monitor/.env
              subPath: monitor.env
        - name: db
          image: postgres
          volumeMounts:
            - name: db
              mountPath: /var/lib/postgresql/data
          imagePullPolicy: IfNotPresent
      volumes:
        - name: dotenv
          configMap:
            name: kubeflow-notebook-ci
        - name: db
          persistentVolumeClaim:
            claimName: kubeflow-notebook-ci
      restartPolicy: Always
