distribution/kustomize/base/notebook-ci/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubeflow-notebook-ci
spec:
  gateways:
    - kubeflow/kubeflow-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /notebook-ci/
      route:
        - destination:
            host: kubeflow-notebook-ci.kubeflow.svc.cluster.local
            port:
              number: 80
      rewrite:
        uri: /
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: kubeflow-notebook-ci
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
  selector:
    matchLabels:
      app: kubeflow-notebook-ci
